# poker_game

./: .travis.yml  LICENSE  README.md  build.sh  deploy.sh  pk_game.proto  ssh-key.enc
back-end/game_tcp_50050/: Makefile  game_msg.h  game_msg_processor.cpp  game_msg_processor.h  game_msg_router.cpp  game_msg_router.h  game_room.h  game_table.cpp  game_table.h  game_tcp_channel.h  main.cpp  pk_game.pb.cc  pk_game.pb.h  test  test_pattern.cpp  timer_channel.cpp  timer_channel.h
back-end/user_manage_rest_9098/: Makefile
back-end/user_manage_rest_9098/user_manage/: CMakeLists.txt
back-end/user_manage_rest_9098/user_manage/.ngrest/: name
back-end/user_manage_rest_9098/user_manage/user_manage/: CMakeLists.txt
back-end/user_manage_rest_9098/user_manage/user_manage/src/: Base64.h  db_sqlite_user.cpp  db_sqlite_user.h  random_user.cpp  random_user.h  user_manage.cpp  user_manage.h
env/: build-rest.sh  run-server.sh
front-end/pk_prj/: README.md  package-lock.json  package.json  vue.config.js
front-end/pk_prj/src/: main.js
front-end/pk_prj/src/plugins/: axios.js  (+2 more)
front-end/poker_game/: cards_img.qrc  initwindow.cpp  initwindow.h  login_view.cpp  login_view.h  main.cpp  network_rest_util.cpp  network_rest_util.h  poker_game.pro  poker_game_zh_CN.qm  poker_game_zh_CN.ts  register_view.cpp  register_view.h  rest_api_json.h
front-end/poker_game/game/: game_control.cpp  game_control.h  game_module.cpp  game_module.h  game_view.cpp  game_view.h
front-end/poker_game/msg-encode-utils/: msg_encode_utils.cpp  msg_encode_utils.h
front-end/vue-game/: index.html
(+5 files in other folders)
